<resources>
    <string name="app_name">NewsBreak</string>
    <string name="open_button">Open</string>
    <string name="open_button_toast">Opening</string>
    <string name="url_edit_text">Enter a URL</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_new">New Stories</string>
    <string name="title_following">Following</string>
    <string name="article_image">Article Image</string>
    <string name="read_more_button">Read more</string>
    <string name="follow_button">Follow Story</string>
    <string name="list_item_article_title">THIS IS THE TITLE</string>
    <string name="list_item_article_description">THIS IS THE DESCRIPTION</string>
    <string name="open_in_browser_button">Open in Browser</string>
    <string name="menu_item_search">Search</string>
    <string name="list_item_article_author">AUTHOR</string>
    <string name="more_info_button">More</string>
    <string name="new_stories_date">DATE</string>
    <string name="followed_story_placeholder">Your Followed Story</string>
    <string name="menu_item_add_story">Add Story</string>
    <string name="menu_item_delete_story">Delete story</string>
    <string name="start_polling">Start Background Updates</string>
    <string name="stop_polling">Stop Background Updates</string>
</resources>