<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/article_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:contentDescription="@string/article_image"
        android:src="@drawable/article_placeholder"
        android:scaleType="fitXY"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/article_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_article_description"
            app:layout_constraintBottom_toTopOf="@id/article_read_more_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/article_title" />

        <ImageButton
            android:id="@+id/article_follow_button"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@null"
            android:contentDescription="@string/follow_button"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/article_read_more_button"
            app:srcCompat="@drawable/ic_favorite_foreground" />

        <ImageButton
            android:id="@+id/article_read_more_button"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@null"
            android:contentDescription="@string/open_in_browser_button"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_open_with_browser_foreground" />

        <TextView
            android:id="@+id/article_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_article_title"
            app:layout_constraintBottom_toTopOf="@+id/article_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/article_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/new_stories_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="parent" />

</LinearLayout>