<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/article_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="THIS IS THE TITLE" />

    <TextView
        android:id="@+id/article_description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="THIS IS THE DESCRIPTION" />

    <ImageView
        android:id="@+id/article_image_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/article_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <Button
            android:id="@+id/read_more_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/read_more_button" />

        <Button
            android:id="@+id/follow_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/follow_button"
            android:text="FOLLOW" />


    </LinearLayout>
</LinearLayout>