<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newStories.NewStoriesFragment">
    
    <TextView
        android:id="@+id/article_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="THIS IS THE TITLE"
        app:layout_constraintBottom_toTopOf="@+id/article_description_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/follow_button" />

    <TextView
        android:id="@+id/article_description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="THIS IS THE DESCRIPTION"
        app:layout_constraintBottom_toTopOf="@+id/follow_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/follow_button" />

    <ImageView
        android:id="@+id/article_image_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/article_image"
        app:layout_constraintBottom_toTopOf="@+id/follow_button"
        app:layout_constraintEnd_toStartOf="@+id/article_description_textview"
        app:layout_constraintStart_toStartOf="@+id/follow_button" />

    <Button
        android:id="@+id/follow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/follow_button"
        android:text="FOLLOW"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/read_more_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_more_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/follow_button"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
